# TD_TauCeti_Presetsystem

./: .gitignore  .packagefolder  TauCeti_PresetSystem.toe  pyproject.toml  readme.md
AppData/Components/: PrivateInvestigator.tox
AppData/PrivateInvestigator/: AC_Group.json
AppData/Scripts/: package_release.py
modules/release/: readme.md  tweener.tox
modules/release/Default/: PresetManager.tox  Tweener.tox
modules/suspects/project1/: presetManager.tox  tweener.tox  tweenerTest.py
modules/suspects/project1/presetManager/: extParStack.py  extTauCetiManager.py  ui.tox
modules/suspects/project1/preset_Dashboard/: extDashboard.py
modules/suspects/project1/tweener/: Exceptions.py  TweenObject.py  TweenValue.py  extTweener.py  fade.py
src/TauCeti/: __init__.py  tweenerTest.py
src/TauCeti/PresetChopMapper/: PresetChopMapper.tox  extPresetMapper.py
src/TauCeti/PresetCuelist/: PresetCuelist.tox  __init__.py  extCuelist.py
src/TauCeti/PresetDashboard/: PresetDashboard.tox  __init__.py  extDashboard.py
src/TauCeti/PresetManager/: ParUtils.py  PresetManager.tox  __init__.py  extParStack.py  extTauCetiManager.py
src/TauCeti/PresetManager/ui/: ui.tox
src/TauCeti/PresetMapper/: PresetMapper.tox  __init__.py
src/TauCeti/Tweener/: Exceptions.py  TweenObject.py  TweenValue.py  Tweener.tox  __init__.py  extTweener.py
src/TauCeti/Tweener/curves/: curves.tox
