[project]
name = "TauCeti"
version = "5.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.tox"]
